# optunacy

./: .gitignore  README.md  maintainernotes.md  pyproject.toml  tox.ini
.github/workflows/: check.yml
src/optunacy/: oplot.py
tests/: test_basic.py  test_command.py
