[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "optunacy"
authors = ["Reto Stamm"]
maintainers = ["Reto Stamm"]
description = "Optunacy is a contour plot generator for Optuna studies."
readme = "README.md"
version = "0.1.0"
keywords = ["optuna", "contour", "plot", "snn", "hyperparameter", "optimization"]
license = "GPL-3"
classifiers = [ "Programming Language :: Python :: 3", ]
homepage = "https://github.com/retospect/optunacy"
repository = "https://github.com/retospect/optunacy" 

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.18.0"
numpy = "^1.26.2"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
optuna = "^3.4.0"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/optunacy/__init__.py" = ["{version}"]
